fix alignment of figure + line in mobile

--- a/css/style.css
+++ b/css/style.css
@@ -176,11 +176,6 @@ html {
 /*====================
 Sandy's footer section
 ======================*/
-
-/*=================================
-General footer style
-=================================*/
-
 footer{
   background-color: #0E2E4E;
   color:#fff;
@@ -200,9 +195,8 @@ footer{
   width: fit-content;
   margin: 0 auto;
 }
-
 .profile__line{
-  width: 15rem;
+  width: 7rem;
   height: 0.3rem;
   background-color: #FFB901;
   margin-bottom: 4rem;
@@ -353,9 +347,6 @@ input{
       font-size: 34px;
       padding: 5rem 2rem 2rem 2rem;
     }
-
-
-
    /*==================================
     Body Styles - Alyssa
   ==================================*/
@@ -418,37 +409,33 @@ input{
   [hidden] {
     display: none !important;
   }
-    /*===============
-      Sandy Footer
-    =================*/
+    /*======================
+          Sandy Footer
+    ========================*/
      /* About us and instagram section hidden in mobile size */
   .about, .instagram,
   [hidden] {
     display: none !important;
   }
-
+  .extra-info {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmak(300px, 1fr));
+  }
+/*
   .flexbox_container{
     display: flex;
     flex-direction: column;
   }
-
+*/
   .director__info{
     display: flex;
     align-items: flex-start;
-    margin: 2rem;
-    gap: 2rem;
+    gap: 1rem;
     order:-2;
     width: 27rem;
-    height: 11.375rem;
     flex-shrink: 0;
+    margin-top: 3rem;
   }
-
-  .director__caption{
-    margin-left:0.47rem;
-    margin-right:1rem;
-    flex-shrink: 0;
-  }
-
   .director__image{
     width: 8.66275rem;
     height: 7.49113rem;
@@ -457,12 +444,13 @@ input{
   }
 
   .director__caption{
-    width: 20rem;
-    height:auto;
+    max-width: 15rem;
     flex-shrink: 0;
-    font-size:0.75rem;
+    font-size: 12px;
   }
-
+  .profile__line {
+    margin-left: 38%;
+  }
   .track{
     display:flex;
     flex-direction: column;
